iproute2 (5.10.0-4jens19) UNRELEASED; urgency=medium

  * Add qdisc inner workings documentation
  * Java: improve sojourn time display

 -- Thorsten Glaser <t.glaser@tarent.de>  Mon, 26 Dec 2022 09:46:40 +0100

iproute2 (5.10.0-4jens18) tarent; urgency=medium

  * Install ratedemo as well
  * Re-add compatibility with Linux 5.4 as used on focal

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 17 Nov 2022 12:11:51 +0100

iproute2 (5.10.0-4jens17) tarent; urgency=high

  * Fix an oops in the DKMS file

 -- Thorsten Glaser <t.glaser@tarent.de>  Wed, 09 Nov 2022 19:12:31 +0100

iproute2 (5.10.0-4jens16) tarent; urgency=medium

  * Add sch_janzdbg kernel module, with self-monitoring for performance
    of the kernel qdisc_watchdog functionality
  * Add debugfs-based mass rate change functionality and example program
  * Update documentation accordingly
  * Note performance considerations (renice ksoftirqd) in the docs

 -- Thorsten Glaser <t.glaser@tarent.de>  Tue, 08 Nov 2022 23:52:56 +0100

iproute2 (5.10.0-4jens15) tarent; urgency=medium

  * iproute2 Provides iproute-janz to indicate the patched version, so
    consumers can Depends on iproute2 (= 5.10.0-4jens15) | iproute-janz
  * Do not list the current extra latency in TC_JANZ_RELAY_QUEUESZ after
    all; this is less flexible, and the value is not the one in use for
    what’s reported anyway
  * Keep times in nanoseconds everywhere, as recommended by Dave Täht,
    as this targets amd64 only basically so it’s no speed loss but makes
    code reviews easier; keep 1024ns units for TC_JANZ_RELAY_SOJOURN.d32
  * Refactor code for better timestamp comparisons and some extra checks
  * Correct free-skb method for qdisc fast path; thanks Eric Dumazet

 -- Thorsten Glaser <t.glaser@tarent.de>  Wed, 12 Oct 2022 22:09:59 +0000

iproute2 (5.10.0-4jens14) tarent; urgency=medium

  * Replace sch_jens/sch_jhtb with sch_janz entirely (testing indicates
    this works and is a good idea after all) and clean up accordingly